kubernetes/apps/production/arr/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sonarr
    namespace: arr
    labels:
        app: sonarr
spec:
    replicas: 1
    selector:
        matchLabels:
            app: sonarr
    template:
        metadata:
            labels:
                app: sonarr
        spec:
            securityContext:
                runAsUser: 65534
                runAsGroup: 65534
                fsGroup: 65534
                fsGroupChangePolicy: OnRootMismatch
            containers:
                - name: sonarr
                  image: ghcr.io/onedr0p/sonarr:rolling@sha256:55c6878a5367fc2398d15c9a16a70653f5e5f42c9fe9b708a038f2781fb0360f
                  imagePullPolicy: IfNotPresent
                  resources:
                    requests:
                        memory: 512Mi
                        cpu: 75m
                    limits:
                        memory: 1024Mi
                        cpu: 150m
                  volumeMounts:
                    - mountPath: /config
                      name: sonarr-config
                    - mountPath: /data
                      name: nas
            volumes:
                - name: nas
                  nfs:
                    path: /mnt/thePool/thePoolShare
                    server: 10.0.0.10
                - name: sonarr-config
                  persistentVolumeClaim:
                    claimName: sonarr-config
