kubernetes/apps/production/arr/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-sonarr
  namespace: arr
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
  type: ClusterIP
